--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "got": "^11.8.3"
+    "got": "^11.8.3",
+    "redis": "^3.1.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/got": "^9.6.12",
     "@types/node": "^16.11.9",
+    "@types/redis": "^2.8.32",
     "concurrently": "^6.4.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "typescript": "^4.5.2"
   }
 }
